[tool.poetry]
name = "aiomonobank"
version = "0.0.1"
description = "aiomonobank is a Python library for interacting with the Monobank API."
authors = [
    "Gleb Garanin <glebgar567@gmail.com>"
]
repository = "https://github.com/GLEF1X/aiomonobank"
documentation = "https://aiomonobank.readthedocs.io/en/latest/"
packages = [
    { include = "./aiomonobank" }
]
readme = 'README.md'
maintainers = [
    "GLEF1X <glebgar567@gmail.com>",
]
keywords = [
    "monobank",
    "mono",
    "api",
    "wrapper",
    "asyncio",
    "monobank"
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.0"
pydantic = "^1.9.0"
typing_extensions = { version = "^4.0.1", python = "<=3.7" }

# Fast
uvloop = { version = "^0.16.0", markers = "sys_platform == 'darwin' or sys_platform == 'linux'", optional = true }
aiofiles = { version = "^0.8.0", optional = true }

# Docs
Sphinx = { version = "^4.2.0", optional = true }
sphinx-intl = { version = "^2.0.1", optional = true }
sphinx-autobuild = { version = "^2021.3.14", optional = true }
sphinx-copybutton = { version = "^0.5.0", optional = true }
furo = { version = "^2022.2.23", optional = true }
sphinx-prompt = { version = "^1.5.0", optional = true }
Sphinx-Substitution-Extensions = { version = "^2020.9.30", optional = true }
towncrier = { version = "^21.3.0", optional = true }
pygments = { version = "^2.4", optional = true }
pymdown-extensions = { version = "^8.2", optional = true }
markdown-include = { version = "^0.6", optional = true }
sphinxemoji = { version = "*", optional = true }
sphinx-notfound-page = { version = "*", optional = true }



[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
anyio = "^3.5.0"
trio = "^0.20.0"

[tool.poetry.extras]
fast = ["uvloop", "aiofiles"]
docs = [
    "sphinx",
    "sphinx-intl",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "furo",
    "black",
    "sphinx-prompt",
    "Sphinx-Substitution-Extensions",
    "towncrier",
    "pygments",
    "pymdown-extensions",
    "markdown-include",
    "sphinxemoji",
    "sphinx-notfound-page",
]

[tool.pytest.ini_options]
markers = ["slow: mark test as slow."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
